# slack-summarization-agent

./: .gitignore  config.py  dev_server.py  gold_standard_summary.py  interaction_handler.py  main.py  mapped_tasks.json  ngrok.py  notion_client.py  notion_fetcher.py  notion_steps.txt  processes.json  prompt.py  pyproject.toml  readme.md  requirements.txt  sales_summary.txt  setup_notion.py  slack_client.py  slack_messages.txt  summarizer.py  task_mapper.py  webhook_server.py
next_step_agent/: app.py  interaction_handler.py  summarizer.py  webhook_server.py
next_step_agent/calendar/: calendar_utils.py
next_step_agent/data/: mapped_tasks.json  old-processes.json  processes.json  users.json
next_step_agent/notion/: notion_client.py  notion_data_fetcher.py  setup_notion.py
next_step_agent/openai/: gold_standard_summary.py  prompt.py
next_step_agent/slack/: slack_client.py
next_step_agent/tasks/: task_mapper.py  task_prioritizer.py
tests/: test_modal.py
